--- a/src/app/data/projectData.json
+++ b/src/app/data/projectData.json
@@ -1,8 +1,27 @@
 [
   {
+    "title": "Notes.ai V3.0",
+    "types": ["React", "Python", "Node.js", "Electron"],
+    "img": "Notesai.png",
+    "link": "",
+    "appStore": "https://apps.apple.com/us/app/notes-ai/id6477414161",
+    "github": "",
+    "description": "A mac OS application that uses OpenAI whistler model to generate notes from the user's voice. The app is built with React, Python, Node.js, and Electron. The app version 2.0 is available on the App Store. We are working on the version 3.0."
+  },
+  {
+    "title": "Wu's Portfolio V2.0",
+    "types": ["React", "Python", "Node.js", "Electron"],
+    "img": "portfolio.png",
+    "link": "https://wu-portfolio.vercel.app/",
+    "github": "https://github.com/zhipengwu90/wuPortfolio",
+    "description": "This project is my portfolio website. It is built with React, TypeScript. The website is responsive and mobile-friendly."
+  },
+  
+  
+  {
     "title": "Hands On",
     "types": ["React Native", "Firebase", "Node.js", "Express.js"],
-    "img": "portfolio.png",
+    "img": "hands_on.png",
     "link": "",
     "github": "https://github.com/zhipengwu90/Hands_On_app",
     "description": "The mobile application that connects busy people with reliable helpers in their local area. The app is built with React Native and Expo. The backend is built with Node.js, Express.js, and Firebase."
@@ -10,15 +29,15 @@
   {
     "title": "Chatbot",
     "types": ["Next.js", "TypeScript", "OpenAI"],
-    "img": "portfolio.png",
+    "img": "chatbot.png",
     "link": "https://www.wuapp.app/",
     "github": "https://github.com/zhipengwu90/Chatbot",
-    "description": "This web application allows the user to switch between the OpenAI models of GPT-3.5 Turbo and GPT-4. Employed cutting-edge technologies, including React, Next.js, and the powerful OpenAI API, to deliver a seamless and intuitive platform. "
+    "description": "This project uses the ChatGPT API and Vercel Edge functions with streaming. Users, with their own OpenAI API key, can use this web application as a personal ChatGPT and switch between models as needed, without having to pay for ChatGPT plus. The app is built with Next.js and TypeScript."
   },
   {
     "title": "VFriend",
     "types": ["React Native", "Firebase", "OpenAI"],
-    "img": "portfolio.png",
+    "img": "VFriend.png",
     "link": "",
     "github": "https://github.com/zhipengwu90/VFriend",
     "description": "This mobile application enabling users to create and interact with virtual characters. The app is built with React Native and Expo, and integrated with the OpenAI API."
@@ -26,15 +45,15 @@
   {
     "title": "Fever Scanner",
     "types": ["Python"],
-    "img": "portfolio.png",
+    "img": "FeverScanner.png",
     "link": "",
-    "github": "https://github.com/zhipengwu90/VFriend",
+    "github": "https://github.com/zhipengwu90/FeverScanner",
     "description": "This project is using raspeberry pi and thermal imaging camera to create a fever scanner to monitor the users' body temperature The users will scan their NFC tags to identify their IDs, then trigger the thermal imaging camera to start taking the body temperature."
   },
   {
     "title": "Dream House",
     "types": ["JavaScript", "HTML", "CSS", "Bootstrap"],
-    "img": "portfolio.png",
+    "img": "dream_house.png",
     "link": "https://zhipengwu90.github.io/ITAS191/index.html",
     "github": "https://github.com/zhipengwu90/zhipengwu90.github.io/tree/main/ITAS191",
     "description": "This project is using raspeberry pi and thermal imaging camera to create a fever scanner to monitor the users' body temperature The users will scan their NFC tags to identify their IDs, then trigger the thermal imaging camera to start taking the body temperature."
@@ -42,7 +61,7 @@
   {
     "title": "Wu's Portfolio",
     "types": ["JavaScript", "HTML", "CSS", "Bootstrap"],
-    "img": "portfolio.png",
+    "img": "portfolioV1.png",
     "link": "https://zhipengwu90.github.io/index.html",
     "github": "https://github.com/zhipengwu90/zhipengwu90.github.io",
     "description": "This project is my portfolio website. It is built with HTML, CSS, and JavaScript. The website is responsive and mobile-friendly."
@@ -50,7 +69,7 @@
   {
     "title": "Canada Market",
     "types": ["WordPress", "PHP", "HTML", "CSS"],
-    "img": "portfolio.png",
+    "img": "CanadaMarket.png",
     "link": "",
     "github": "",
     "description": "This project is a website for house hunting, it is built with WordPress. The website is responsive and mobile-friendly."
