--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "eventsource-parser": "^1.1.2",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "openai": "^4.54.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
