--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "axios": "^1.7.3",
     "eventsource-parser": "^1.1.2",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
